--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Simple and highly extensible validation library",
   "main": "index.js",
   "browserify": {
-    "transform": ["coffeeify"]
+    "transform": [
+      "coffeeify"
+    ]
   },
   "scripts": {
     "test": "./node_modules/.bin/barrier $(find test -name '*_test.coffee')"
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "barriertest": "~0.4.1",
-    "sinon": "~1.9.1"
+    "sinon": "~1.9.1",
+    "coffeeify": "~0.6.0"
   }
 }
